--- a/package.json
+++ b/package.json
@@ -6,10 +6,8 @@
     "dev": "next dev --turbopack",
     "build": "prisma generate && next build",
     "start": "next start",
-    "lint": "next lint"
-  },
-  "prisma": {
-    "seed": "npx tsx prisma/seed.ts"
+    "lint": "next lint",
+    "product-seed": "npx tsx src/features/products/server/db/seed.ts"
   },
   "dependencies": {
     "@prisma/client": "^6.3.1",
@@ -33,16 +31,23 @@
     "zod": "^3.24.1"
   },
   "devDependencies": {
-    "@eslint/eslintrc": "^3",
     "@tanstack/eslint-plugin-query": "^5.66.0",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "eslint": "^9",
-    "eslint-config-next": "15.1.6",
+    "@typescript-eslint/eslint-plugin": "^8.24.0",
+    "@typescript-eslint/parser": "^8.24.0",
+    "eslint": "8.57.0",
+    "eslint-config-next": "14.1.3",
+    "eslint-config-prettier": "9.1.0",
+    "eslint-plugin-boundaries": "^5.0.1",
+    "eslint-plugin-import": "2.29.1",
+    "eslint-plugin-react": "^7.37.4",
+    "globals": "^15.14.0",
     "postcss": "^8",
     "prisma": "^6.3.1",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5"
+    "typescript": "^5.3.3",
+    "typescript-eslint": "^8.24.0"
   }
 }
