--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "lucide-react": "^0.474.0",
     "mongoose": "^8.10.0",
     "next": "15.1.6",
+    "nprogress": "^0.2.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-medium-image-zoom": "^5.2.13",
@@ -36,6 +37,7 @@
   "devDependencies": {
     "@tanstack/eslint-plugin-query": "^5.66.0",
     "@types/node": "^20",
+    "@types/nprogress": "^0.2.3",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "@typescript-eslint/eslint-plugin": "^8.24.0",
