--- a/package.json
+++ b/package.json
@@ -7,31 +7,39 @@
     "build": "prisma generate && next build",
     "start": "next start",
     "lint": "next lint",
-    "product-seed": "npx tsx src/features/products/server/db/seed.ts"
+    "product-seed": "npx tsx src/features/products/server/db/seed.ts",
+    "user-seed": "npx tsx src/features/auth/server/db/seed.ts"
   },
   "dependencies": {
-    "@prisma/client": "^6.3.1",
+    "@auth/prisma-adapter": "^2.7.4",
+    "@hookform/resolvers": "^4.0.0",
+    "@prisma/client": "^6.4.0",
+    "@radix-ui/react-dropdown-menu": "^2.1.6",
+    "@radix-ui/react-label": "^2.1.2",
     "@radix-ui/react-scroll-area": "^1.2.3",
     "@radix-ui/react-select": "^2.1.6",
     "@radix-ui/react-separator": "^1.1.2",
     "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/react-toast": "^1.2.6",
     "@reduxjs/toolkit": "^2.5.1",
+    "bcryptjs": "^3.0.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "embla-carousel-autoplay": "^8.5.2",
     "embla-carousel-react": "^8.5.2",
     "lucide-react": "^0.474.0",
     "next": "15.1.6",
+    "next-auth": "^5.0.0-beta.25",
     "nprogress": "^0.2.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hook-form": "^7.54.2",
     "react-medium-image-zoom": "^5.2.13",
     "react-redux": "^9.2.0",
     "redux-persist": "^6.0.0",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
-    "zod": "^3.24.1"
+    "zod": "^3.24.2"
   },
   "devDependencies": {
     "@tanstack/eslint-plugin-query": "^5.66.0",
@@ -49,7 +57,7 @@
     "eslint-plugin-react": "^7.37.4",
     "globals": "^15.14.0",
     "postcss": "^8",
-    "prisma": "^6.3.1",
+    "prisma": "^6.4.0",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.3.3",
     "typescript-eslint": "^8.24.0"
